# AsyncFlow

./: .env.example  .gitignore  .pre-commit-config.yaml  PORTFOLIO.md  QUICKSTART.md  README.md  docker-compose.yml  makefile  pyproject.toml
.github/workflows/: tests.yml
api_gateway/: Dockerfile  docker-entrypoint.sh  pyproject.toml
api_gateway/src/: main.py  schemas.py  security.py
api_gateway/src/api/: auth.py  orders.py  payments.py
api_gateway/src/core/: __init__.py  config.py  metrics.py  schemas.py  security.py  services.py
api_gateway/src/middleware/: __init__.py  auth.py  metrics.py  rate_limit.py
auth_service/: Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml
auth_service/migrations/: env.py
auth_service/migrations/versions/: 001_create_users_table.py
auth_service/src/: main.py  schemas.py  security.py  settings.py
auth_service/src/db/: base.py
auth_service/src/db/models/: users.py
billing_service/: Dockerfile  pyproject.toml
billing_service/src/: main.py  settings.py
billing_service/src/consumers/: order_consumer.py
billing_service/src/db/: base.py
billing_service/src/db/models/: payments.py
billing_service/src/models/: events.py
db/init/: 01-init.sql
docs/: development.md
frontend/: .gitignore  Dockerfile  index.html  nginx.conf  package.json  vite.config.js
frontend/src/: App.css  App.jsx  main.jsx
order_service/: Dockerfile  pyproject.toml  pytest.ini  setup.py
order_service/scripts/: install_dev.sh
order_service/src/: __init__.py  main.py  rabbit.py  settings.py
order_service/src/api/: __init__.py  dependencies.py  health.py  orders.py
order_service/src/db/: base.py  dependency.py
order_service/src/db/models/: __init__.py  orders.py
order_service/src/models/: events.py  order_dto.py
order_service/src/tests/: conftest.py  test_health_api.py  test_orders_api.py
scripts/: demo.sh
