[project]
name = "api-gateway"
version = "0.1.0"
description = "API Gateway service for AsyncFlow"
authors = [
    {name = "Aleksei Loguntsov"}
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "Apache-2.0"}

dependencies = [
    "fastapi>=0.104.1,<1.0",
    "uvicorn[standard]>=0.24.0,<1.0",
    "httpx>=0.25.1,<1.0",
    "pydantic>=2.4.2,<3",
    "pydantic-settings>=2.0.3,<3",
    "python-jose[cryptography]>=3.3.0,<4",
    "python-multipart>=0.0.6,<1.0",
    "structlog>=24.1.0,<25",
    "prometheus-client>=0.19.0,<1.0",
    "orjson>=3.9.10,<4"
]

[tool.uv]
# Empty block - uv reads dependency-groups below

[dependency-groups]
dev = [
    # Lint/Format
    "ruff>=0.6,<1",
    "black>=24.8,<25",
    
    # Typing
    "mypy>=1.10,<2",
    "types-python-dateutil>=2.9.0.20240316",
    
    # Tests
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=4.1,<5",
    "httpx>=0.25.1,<1.0"  # For testing HTTP client
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

# Testing configuration
[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["src/tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
minversion = "8.0"
addopts = "-ra -q --strict-markers --disable-warnings --cov=src --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]
branch = true

[tool.ruff]
target-version = "py311"
line-length = 100
fix = true
unsafe-fixes = false
select = [
    "E", "F",          # pycodestyle / pyflakes
    "I",               # isort
    "UP",              # pyupgrade
    "B",               # bugbear
    "SIM",             # simplify
    "C90",             # mccabe complexity
    "PL",              # pylint rules
    "RUF",             # ruff-specific
]
ignore = [
    "E501",            # line length control
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # allow asserts in tests

[tool.ruff.format]
preview = true
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
pretty = true

plugins = ["pydantic.mypy"]

# Source code location
mypy_path = ["src"]

# Relax rules for tests
[[tool.mypy.overrides]]
module = "tests.*"
strict = false