[tool.poetry]
name = "auth-service"
version = "0.1.0"
description = "Authentication service for AsyncFlow"
authors = ["Aleksei Loguntsov"]
readme = "README.md"
packages = [{ include = "*", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"

# --- Web Framework ---
fastapi = ">=0.111.1"
uvicorn = { extras = ["standard"], version = "^0.24.0" }

# --- Data & Validation ---
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
email-validator = "^2.1.0"
python-multipart = "^0.0.6"

# --- Security & Auth ---
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
bcrypt = { version = "^4.3.0" }

# --- Database & ORM ---
sqlalchemy = { version = "^2.0.23", extras = ["asyncio"] }
alembic = "^1.12.1"
asyncpg = "^0.27.0"

# --- Misc ---
# Add here only essential runtime libs

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
black = "^23.10.1"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.10.0"
types-python-jose = "^3.3.4"        # typing hints for jose
types-passlib = "^1.7.7.12"         # typing hints for passlib

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# --- Optional tools configuration ---

[tool.black]
line-length = 88
target-version = ["py311"]
exclude = '''
/(
    \.venv
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 88
skip = ["migrations", ".venv"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-v --maxfail=1 --disable-warnings --cov=src"